fix: apply settings.jvm.test.* in the android and multiplatform renderers
Only the jvm renderer carried the JVM test settings. An android/app or a kmp/lib
declaring settings.jvm.test.freeJvmArgs, settings.jvm.test.systemProperties or
test-settings.jvm.extraEnvironment converted to a build.gradle.kts with no
jvmArgs, systemProperty or environment line anywhere, and the run reported
success without naming the dropped keys.

AndroidBuild and MultiplatformBuild now carry the JvmTestSettings the jvm build
already did, with no default value so a forgotten wire-up fails to compile.
Android emits them through testOptions.unitTests.all, which is the only handle
the Android Gradle Plugin offers on the unit-test task; a multiplatform module
emits them through the tasks.withType<Test>().configureEach block that already
carried useJUnitPlatform(), because that block reaches both jvm() and the android
host-test task. Both blocks now open for the settings alone, not only for JUnit 5.

A multiplatform module with no JVM-backed target has no Test task to apply them
to. It reads the sections without raising and reports the drop as a WARNING,
rather than either failing on a value it never applies or losing it in silence.

Behaviour change: an android/app or a JVM-backed kmp/lib now reads
settings.jvm.test, so a malformed argument list there fails its conversion
instead of deferring unread. Two tests that pinned the old behaviour were
rewritten.

Deliberately left out and filed separately: test-settings.jvm.release, which is
not bound at all (local:109), and the platform-qualified forms settings@<p>.jvm.test
and test-settings@<p>, which need test settings per target (local:110).

No existing golden baseline moved. Two new cases pin the two halves of the guard:
android-test-settings on JUnit 4, where the block opens for the settings alone,
and kmp-test-settings on JUnit 5, where they join useJUnitPlatform().

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>